--- a/Game Pages/MechMaze.html
+++ b/Game Pages/MechMaze.html
@@ -77,12 +77,29 @@
 
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four no-outline desktop-exclusive">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/11634427?color=070c0f" width="960"
-                    height="560"><a href="https://puddleglum.itch.io/mechanical-lab">Play Mechanical Lab on
-                        itch.io</a></iframe>
+            <a class="pseudo-section align-center no-outline span-four second-title desktop-exclusive" href="https://puddleglum.itch.io/mechanical-lab" target="_blank">
+                Play on itch
+            </a>
+            <section class="DisplayGrid Style2 span-four no-outline">
+                <section class=" span-three span-four-vert no-outline"></section>
+
+                <section class="hover-card span-two span-four-vert b1 b2">
+                    <section class="hover-card-cover Style4">
+                        <a href="https://puddleglum.itch.io/mechanical-lab" target="_blank" class="fill-div"></a>
+                    </section>
+
+                    <section>
+                        <a href="https://puddleglum.itch.io/mechanical-lab" target="_blank" class="fill-div">
+                            <img src="../assets/images/Mechanical Labyrinth Web Logo Vertical.png" alt="Mechanical Labyrinth Logo"
+                                width="100%" height="100%">
+                        </a>
+                    </section>
+                </section>
+
+
 
             </section>
+
             <section class="section-divider no-line micro"></section>
             <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
 
