--- a/Game Pages/Babylon.html
+++ b/Game Pages/Babylon.html
@@ -72,16 +72,31 @@
 
 
 
-            <section class="section-divider no-line large desktop-exclusive"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive "></section>
-            <section class="section-divider no-line micro"></section>
+            <section class="section-divider no-line"></section>
 
-            <section class="span-four no-outline desktop-exclusive">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/4573470?color=100c17" width="900"
-                    height="520"><a href="https://puddleglum.itch.io/babylon">Play Babylon on itch.io</a></iframe>
+            <a class="pseudo-section align-center no-outline span-four second-title desktop-exclusive" href="https://puddleglum.itch.io/babylon" target="_blank">
+                Play on itch
+            </a>
+            <section class="DisplayGrid Style2 span-four no-outline">
+                <section class=" span-three span-four-vert no-outline"></section>
+
+                <section class="hover-card span-two span-four-vert b1 b2">
+                    <section class="hover-card-cover Style4">
+                        <a href="https://puddleglum.itch.io/babylon" target="_blank" class="fill-div"></a>
+                    </section>
+
+                    <section>
+                        <a href="https://puddleglum.itch.io/babylon" target="_blank" class="fill-div">
+                            <img src="../assets/images/Babylon Logo NoText.png" alt="Mechanical Labyrinth Logo"
+                                width="100%" height="100%">
+                        </a>
+                    </section>
+                </section>
+
+
+
             </section>
             <section class="section-divider no-line micro "></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
 
             <section class=" DisplayGrid Style6 solid-outline small mobile-exclusive">
                 <section class="Thumbnail Style7">
