--- a/Game Pages/Labyrinth.html
+++ b/Game Pages/Labyrinth.html
@@ -74,17 +74,32 @@
 
 
 
-            <section class="section-divider no-line large desktop-exclusive"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
-            <section class="section-divider no-line micro"></section>
+            <section class="section-divider no-line desktop-exclusive"></section>
 
-            <section class="span-four no-outline desktop-exclusive">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/9448135?color=100d1b" width="960"
-                    height="560"><a href="https://puddleglum.itch.io/labyrinth">Play Labyrinth on itch.io</a></iframe>
+            <a class="pseudo-section align-center no-outline span-four second-title desktop-exclusive" href="https://puddleglum.itch.io/labyrinth" target="_blank">
+                Play on itch
+            </a>
+            <section class="DisplayGrid Style2 span-four no-outline">
+                <section class=" span-three span-four-vert no-outline"></section>
+
+                <section class="hover-card span-two span-four-vert b1 b2">
+                    <section class="hover-card-cover Style4">
+                        <a href="https://puddleglum.itch.io/labyrinth" target="_blank" class="fill-div"></a>
+                    </section>
+
+                    <section>
+                        <a href="https://puddleglum.itch.io/labyrinth" target="_blank" class="fill-div">
+                            <img src="../assets/images/Labyrinth Logo NoText.png" alt="Mechanical Labyrinth Logo"
+                                width="100%" height="100%">
+                        </a>
+                    </section>
+                </section>
+
+
+
             </section>
 
             <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="mobile-exclusive DisplayGrid Style6 solid-outline small">
                 <section class="Thumbnail Style7">
                 </section>
