--- a/Game Pages/Planetarium.html
+++ b/Game Pages/Planetarium.html
@@ -69,20 +69,28 @@
 
 
 
-            <section class="section-divider no-line large desktop-exclusive"></section>
-            <section class="CrossBarSection Style1 b1 b2 desktop-exclusive"></section>
+            <section class="section-divider no-line desktop-exclusive"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="span-four no-outline desktop-exclusive">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/7849190?color=000000" width="1280"
-                    height="740"><a href="https://puddleglum.itch.io/planetarium">Play Planetarium on
-                        itch.io</a></iframe>
+            <a class="pseudo-section align-center no-outline span-four second-title desktop-exclusive" href="https://puddleglum.itch.io/planetarium" target="_blank">
+                Play on itch
+            </a>
+            <section class="DisplayGrid Style2 span-four no-outline">
+                <section class=" span-three span-four-vert no-outline"></section>
 
+                <section class="hover-card span-two span-four-vert b1 b2">
+                    <section class="hover-card-cover Style4">
+                        <a href="https://puddleglum.itch.io/planetarium" target="_blank" class="fill-div"></a>
+                    </section>
 
-
+                    <section>
+                        <a href="https://puddleglum.itch.io/planetarium" target="_blank" class="fill-div">
+                            <img src="../assets/images/Art Display 13.png" alt="Mechanical Labyrinth Logo"
+                                width="100%" height="100%">
+                        </a>
+                    </section>
+                </section>
             </section>
-            <section class="section-divider no-line micro"></section>
-            <section class="CrossBarSection Style1 b3 b4 desktop-exclusive"></section>
             <section class="section-divider no-line small"></section>
             <section class="section-divider"></section>
             <section class=" text-box second-title span-four no-outline">Description</section>
