updated homepage fix

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <section class="no-outline text-headerS1">ABOUT</section>
 
                 &emsp;&emsp;Puddle Studios is a solo indie dev studio founded by Puddle (Rowan Byington), Puddle started
-                developing games in 2020, and specializes in digital art and programming, having developed multiple
+                developing games in 2020. He specializes in digital art and programming, having developed multiple
                 games fully solo, With his most recent project "Forgotten God" planned to be his first commercial
                 release.
 
