--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <section class="text-box span-three large no-outline">
                 <section class="no-outline text-headerS1">ABOUT</section>
 
-                &emsp;&emsp;Puddle Studios is a solo indie dev studio founded by Puddle (Rowan Byington), Puddle started
+                &emsp;&emsp;Puddle or Rowan Byington is a solo indie dev locaed in Florida, Puddle started
                 developing games in 2020. He specializes in digital art and programming, having developed multiple
                 games fully solo, With his most recent project "Forgotten God" planned to be his first commercial
                 release.
