Made header clickable

--- a/index.html
+++ b/index.html
@@ -90,16 +90,23 @@
             <h1 class="main-title no-outline">PUDDLE STUDIOS</h1>
 
             <section class="hero">
-                <section class="hero-card Style2">
-                    <section class="hero-card-cover Style1"></section>
-                    <section>
 
-                        <img src="assets/images/Artist Card.png" alt="Artist Card">
+                <section class="hero-card Style2">
+                    <section class="hero-card-cover Style1">
+                        <a href="./Art.html" target="_blank" class="fill-div"></a>
+                    </section>
+                    
+                    <section>
+                        <a href="./Art.html" target="_blank" class="fill-div">
+
+                            <img src="assets/images/Artist Card.png" alt="Artist Card">
+                        </a>
                     </section>
                 </section>
 
                 <section class="hero-card Style3">
                     <section class="hero-card-cover Style4">
+                        
                     </section>
                     <section>
 
@@ -109,10 +116,15 @@
                 </section>
                 <section class="hero-card Style4">
                     <section>
+                        <a href="./Games.html" target="_blank" class="fill-div">
 
                         <img src="assets/images/Developer Card.png" alt="Developer Card">
+                        </a>
                     </section>
-                    <section class="hero-card-cover Style3"></section>
+                    <section class="hero-card-cover Style3">
+                        <a href="./Games.html" target="_blank" class="fill-div"></a>
+
+                    </section>
                 </section>
 
             </section>
@@ -353,7 +365,7 @@
             <section class="section-divider"></section>
             <section class="section-divider no-line micro"></section>
 
-            <section class="text-footer no-outline align-center span-four">© 2024 puddle-studios.</section>
+            <section class="text-footer no-outline align-center span-four">© 2025 puddle-studios.</section>
 
             <section class="section-divider no-line"></section>
             <section class="section-divider no-line"></section>
