added blog posts

--- a/Social.html
+++ b/Social.html
@@ -48,28 +48,6 @@
         <meta property="twitter:image" content="https://puddle-studios.com/assets/images/Embed Cover.png">
     </head>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <body class="body">
     <div id="preloader"></div>
     <h1 class="invisible">
@@ -90,7 +68,7 @@
         </section>
 
         <section class="header-button"><a href="Art.html">ART</a></section>
-        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+        <section class="header-button"><a href="Blog.html" target="_blank">BLOG</a></section>
     </header>
     <div class="invisible">
         Puddle Studios, an innovative indie game development studio based in Florida, is creating waves in the gaming world with its latest commercial release, 
