--- a/Art.html
+++ b/Art.html
@@ -66,7 +66,7 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
         <section class="header-button"><a href="Art.html">ART</a></section>
-        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+        <section class="header-button"><a href="Blog.html" target="_blank">BLOG</a></section>
 
 
     </header>
