--- a/Game Pages/The Designer.html
+++ b/Game Pages/The Designer.html
@@ -45,7 +45,7 @@
         </section>
 
         <section class="header-button"><a href="../Art.html">ART</a></section>
-        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">ITCH</a></section>
+        <section class="header-button"><a href="https://puddleglum.itch.io/" target="_blank">BLOG</a></section>
     </header>
 
     <section class="GridWrapper">
