fixed header link

--- a/Blog.html
+++ b/Blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Puddle Studios | Art</title>
+        <title>Puddle Studios | Blog</title>
     
     
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -66,7 +66,7 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
         <section class="header-button"><a href="Art.html">ART</a></section>
-        <section class="header-button"><a href="Blog.html" target="_blank">BLOG</a></section>
+        <section class="header-button"><a href="Blog.html">BLOG</a></section>
 
     </header>
     <div class="invisible">
