--- a/Game Pages/Planetarium.html
+++ b/Game Pages/Planetarium.html
@@ -43,7 +43,7 @@
         </section>
 
         <section class="header-button"><a href="../Art.html">ART</a></section>
-        <section class="header-button"><a href="../Blog.html" target="_blank">BLOG</a></section>
+        <section class="header-button"><a href="../Blog.html">BLOG</a></section>
     </header>
 
     <section class="GridWrapper">
