--- a/Games.html
+++ b/Games.html
@@ -78,7 +78,7 @@
             <section class="MenuMoon Moon5"><img src="assets/images/Moons/Cresent Moon Flip 2.png"></section>
         </section>
         <section class="header-button"><a href="Art.html">ART</a></section>
-        <section class="header-button"><a href="Blog.html" target="_blank">BLOG</a></section>
+        <section class="header-button"><a href="Blog.html">BLOG</a></section>
 
 
     </header>
