--- a/Social.html
+++ b/Social.html
@@ -68,7 +68,7 @@
         </section>
 
         <section class="header-button"><a href="Art.html">ART</a></section>
-        <section class="header-button"><a href="Blog.html" target="_blank">BLOG</a></section>
+        <section class="header-button"><a href="Blog.html">BLOG</a></section>
     </header>
     <div class="invisible">
         Puddle Studios, an innovative indie game development studio based in Florida, is creating waves in the gaming world with its latest commercial release, 
