added pitch video

--- a/Blogs/FaeGardenBlog09082025.html
+++ b/Blogs/FaeGardenBlog09082025.html
@@ -76,6 +76,8 @@
 
             <section class="main-title align-center">Fae Forest</section>
             <section class="subtitle no-outline">09.08.2025</section>
+            <section class="section-divider no-line micro"></section>
+
             <section class="section-divider"></section>
 
         
@@ -94,7 +96,19 @@
                 Utilize your knowledge from the human world to outsmart the overlords of the world.
                 
             </section>
+            <section class="section-divider no-line small"></section>
 
+                        <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+            <section class="main-title align-center">Pitch video</section>
+           <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+            <section class="span-four span-one-vert">
+
+                <video controls width="600">
+                  <source src="../assets/Videos/Final Project pitch Mechanical Gardens - Fae Forest.mp4" type="video/mp4" />
+                </video>
+            </section>
 
 
             <section class="section-divider no-line large"></section>
