--- a/Blog.html
+++ b/Blog.html
@@ -112,7 +112,7 @@
            
 
             <section class="section-divider no-line micro"></section>
-            <section class="main-title no-outline">Labyrinth Descension blog</section>
+            <section class="second-title no-outline">Labyrinth Descension</section>
             <section class="subtitle no-outline ">09.08.2025</section>
             <section class="section-divider no-line micro"></section>
 
@@ -122,9 +122,9 @@
 
             <section class="DisplayGrid Style1 span-four span-one-vert">
                 <a class="pseudo-section Style10 clickable" href="Blogs/LDB09082025.html"></a>
-                <!-- <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
+                <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style5 clickable" href="Game Pages/Labyrinth.html"></a>
-                <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a> -->
+                <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a>
             </section>
 
 
