fixed blog link

--- a/Blog.html
+++ b/Blog.html
@@ -113,10 +113,10 @@
 
 
             <section class="DisplayGrid Style1 span-four span-one-vert">
-                <a class="pseudo-section Style10 clickable" href="Blogs/LDB09082025.html"></a>
-                <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
+                <a class="pseudo-section Style10 clickable" href="Blogs/LDB09092025.html"></a>
+                <!-- <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style5 clickable" href="Game Pages/Labyrinth.html"></a>
-                <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a>
+                <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a> -->
             </section>
 
 
