--- a/Blog.html
+++ b/Blog.html
@@ -150,6 +150,13 @@
 
                       
                 </a>
+                   <a class="pseudo-section Style11 clickable" href="Blogs/LDBRB09192025.html">
+                    <section class="subtitle align-center solid-bg">
+                        09.19 RB
+                    </section>
+
+                      
+                </a>
                 <!-- <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style5 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a> -->
