--- a/Blog.html
+++ b/Blog.html
@@ -165,6 +165,13 @@
 
                       
                 </a>
+                    <a class="pseudo-section Style11 clickable" href="Blogs/LDBDH09192025.html">
+                    <section class="subtitle align-center solid-bg">
+                        09.19 DH
+                    </section>
+
+                      
+                </a>
                 <!-- <a class="pseudo-section Style11 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style5 clickable" href="Game Pages/Labyrinth.html"></a>
                 <a class="pseudo-section Style9 clickable" href="Game Pages/Labyrinth.html"></a> -->
