Added resume button

--- a/index.html
+++ b/index.html
@@ -430,6 +430,15 @@
                 </section>
             </section>
 
+            <section class="section-divider no-line small"></section>
+
+            <section class="DisplayGrid Style1 span-four span-one-vert">
+            <section class="span-four clickable">
+                    <a target="_blank" href="https://drive.google.com/uc?export=download&id=1xY71rtzRoIjC7w403oTDY8KD4uP9m3x5"><img src="assets/images/ResumeButton.png" alt="Puddle Studios Art"></a>
+                </section>
+
+            </section>
+
 
             <section class="section-divider no-line small"></section>
 
