--- a/Game Pages/Labyrinth.html
+++ b/Game Pages/Labyrinth.html
@@ -38,7 +38,7 @@
         <section class="header-button"><a href="../Social.html">SOCIAL</a></section>
         <section class="header-button"><a href="../Games.html">GAMES</a></section>
         <section class="MenuWrapper no-outline Home">
-            <a href="index.html" class="home-link"></a>
+            <a href="../index.html" class="home-link"></a>
             <section class="MenuMoon Moon1"><img src="../assets/images/Moons/Full Moon.png"></section>
             <section class="MenuMoon Moon2"><img src="../assets/images/Moons/Cresent Moon 1.png"></section>
             <section class="MenuMoon Moon3"><img src="../assets/images/Moons/Cresent Moon Flip 1.png"></section>
