Added pinkslips and depono pages

--- a/Games.html
+++ b/Games.html
@@ -133,6 +133,50 @@
 
 
             <section class="section-divider no-line micro"></section>
+            <section class="main-title no-outline">DEPONO</section>
+            <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+            <section class="DisplayGrid Style1 span-four">
+                <a class="pseudo-section Style1 clickable b1" href="Game Pages/Depono.html"></a>
+                <section class="span-two span-two-vert clickable">
+                    <a href="Game Pages/Depono.html"> <img src="assets/images/Depono Web Icon Text.png"></a>
+                </section>
+                <a class="pseudo-section Style1 clickable b2" href="Game Pages/Depono.html"></a>
+                <a class="pseudo-section Style2 clickable " href="Game Pages/Depono.html"></a>
+                <a class="pseudo-section Style8 clickable" href="Game Pages/Depono.html"></a>
+
+            </section>
+            <section class="section-divider no-line"></section>
+            <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+
+
+
+
+      <section class="section-divider no-line micro"></section>
+            <section class="main-title no-outline">Planetarium</section>
+            <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+            <section class="DisplayGrid Style1 span-four span-one-vert no-outline">
+                <a class="pseudo-section Style3 b1 clickable" href="Game Pages/PinkSlips.html"></a>
+
+                <a class="pseudo-section Style1 clickable span-two" href="Game Pages/PinkSlips.html">
+                    <img src="assets/images/PinkSlips Landscape.png">
+                </a>
+
+              
+
+                <a class="pseudo-section Style9 b3 clickable" href="Game Pages/PinkSlips.html"></a>
+
+            </section>
+            <section class="section-divider no-line"></section>
+            <section class="section-divider"></section>
+            <section class="section-divider no-line small"></section>
+
+
+
+
+                <section class="section-divider no-line micro"></section>
             <section class="main-title no-outline">The Designer</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
@@ -149,12 +193,14 @@
 
 
 
+            
+
+
 
 
             <section class="section-divider no-line"></section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
-
 
 
             <section class="DisplayGrid Style2 span-three-vert span-two no-outline">
