--- a/Games.html
+++ b/Games.html
@@ -154,7 +154,7 @@
 
 
       <section class="section-divider no-line micro"></section>
-            <section class="main-title no-outline">Planetarium</section>
+            <section class="main-title no-outline">Pink Slips</section>
             <section class="section-divider"></section>
             <section class="section-divider no-line small"></section>
             <section class="DisplayGrid Style1 span-four span-one-vert no-outline">
